@@ -19,6 +19,7 @@ Version 1.1.3 to be released
 - Bug #1252: CJSON::encode() was not able to encode models and model arrays (Sam Dark)
 - Enh #663: Improved CSecurityManager to allow customizing the crypt/hash algorithms being used (Qiang)
 - Enh #862: Enhanced CSort virtual attributes and support for related tables (Qiang)
+- Enh #952: Enhanced support for using defaultParams in CUrlManager (Qiang)
 - Enh #1158: Added translations in Latvian (lafriks)
 - Enh #1166: Added CActiveRecord::setOldPrimaryKey (Qiang)
 - Enh #1174: AR's count() now generates more reasonable SQL statement when 'group' option is specified (Qiang)
